# fastapi_genshin_map

./: .gitignore  .gitmodules  README.md  map.yaml  requirements.txt
fastapi_genshin_map/: main.py
fastapi_genshin_map/GetMapImage/: download.py  get_map_image.py  logger.py  map.yaml
fastapi_genshin_map/GetMapImage/GenshinMap/: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fastapi_genshin_map/GetMapImage/GenshinMap/.github/workflows/: codecov.yml
fastapi_genshin_map/GetMapImage/GenshinMap/genshinmap/: img.py  models.py  request.py  utils.py
fastapi_genshin_map/GetMapImage/GenshinMap/tests/: anchors.json  labels.json  maps.json  page.json  points.json  test_exc.py  test_kmeans.py  test_models.py  test_request.py  test_utils.py
fastapi_genshin_map/GetMapImage/GenshinMap/tests/spots/: kinds.json  spots.json
