[tool.poetry]
name = "genshinmap"
version = "0.1.0"
description = "GenshinMap 是一个米游社大地图 API 的包装，用于简易获取大地图数据"
authors = ["MingxuanGame <MingxuanGame@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # for scipy
scipy = "^1.9.0"
Pillow = "^9.2.0"
httpx = "^0.23.0"
pydantic = "^1.9.1"
numpy = "^1.23.1"
scikit-learn = "^1.1.2"
shapely = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
coverage = "^6.5.0"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=genshinmap --cov-report=term-missing"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
